--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -103,6 +103,7 @@
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(4px);
   color: white;
+  text-decoration: none;
 }
 .hero-para-line-div {
   display: flex;
