--- a/src/Pages/ContactUsPage/ContactUsPage.css
+++ b/src/Pages/ContactUsPage/ContactUsPage.css
@@ -365,6 +365,52 @@
   margin: auto;
 }
 
+
+
+
+.contact-carousel-wrapper {
+  position: relative;
+}
+
+.contact-carousel-swiper {
+  width: 100%;
+  height: 50vh;
+}
+
+.contact-carousel-card {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 50vh;
+  border-radius: 10px;
+}
+
+.contact-carousel-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.contact-carousel-title {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  color: white;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.contact-carousel-text {
+  height: 50vh;
+  border-radius: 10px;
+}
+.con-car-btn-success{
+  background-color: #5ac501;
+  color: white;
+}
+
 @media (max-width:768px) {
   .contact-card{
     width: 48%;
@@ -383,5 +429,8 @@
   }
   .InternationalChapters__single-card-div{
     width: 100%;
+  }
+  .contact-carousel-text{
+    height: fit-content;
   }
 }
