--- a/src/Pages/CampusPlacementsPage/CampusPlacementsPage.css
+++ b/src/Pages/CampusPlacementsPage/CampusPlacementsPage.css
@@ -240,7 +240,8 @@
 .cpp-mindmap-cards-container {
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  justify-content: space-between;
+  height: 100%;
   width: 100%;
 }
 
@@ -248,6 +249,7 @@
   background: linear-gradient(205deg, rgb(7, 186, 243) 1%, rgb(23, 3, 169) 100%) !important;
   color: white;
   padding: 20px;
+  font-size: 18px;
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   width: 100%;
